[gd_scene load_steps=16 format=2]

[ext_resource path="res://Floorx5.tscn" type="PackedScene" id=1]
[ext_resource path="res://Key.tscn" type="PackedScene" id=2]
[ext_resource path="res://Door.tscn" type="PackedScene" id=3]
[ext_resource path="res://ExitDoor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Background.tscn" type="PackedScene" id=5]
[ext_resource path="res://DarkBackground.tscn" type="PackedScene" id=6]
[ext_resource path="res://Player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Corner.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scene4.gd" type="Script" id=9]
[ext_resource path="res://Knight.tscn" type="PackedScene" id=10]
[ext_resource path="res://MotherCall.tscn" type="PackedScene" id=11]
[ext_resource path="res://KeyNote.tscn" type="PackedScene" id=12]
[ext_resource path="res://Sounds.tscn" type="PackedScene" id=13]
[ext_resource path="res://Sounds/What's sparkling.wav" type="AudioStream" id=14]
[ext_resource path="res://Sounds/I hear you.wav" type="AudioStream" id=15]

[node name="Scene4" type="Node"]
script = ExtResource( 9 )

[node name="Background" parent="." instance=ExtResource( 5 )]

[node name="ExitDoor" parent="." instance=ExtResource( 4 )]
position = Vector2( 220, 116 )
nextScene = "res://Scene5.tscn"

[node name="Door" parent="." instance=ExtResource( 3 )]
modulate = Color( 0.231373, 0.388235, 0.254902, 1 )
position = Vector2( 120, 116 )

[node name="Key" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.231373, 0.388235, 0.254902, 1 )
position = Vector2( 72, 64 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Key"]
polygon = PoolVector2Array( 0, 4, -28, 76, 60, 76, 0, -4 )

[node name="DarkBackground" parent="." instance=ExtResource( 6 )]

[node name="Walls" type="Node" parent="."]

[node name="Floorx5" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 0, 140 )

[node name="Floorx13" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 8, 100 )
rotation = 1.57079

[node name="Floorx15" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 8, 88 )
rotation = 1.57079

[node name="Floorx14" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 40, 88 )
rotation = 3.14159

[node name="Floorx16" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 64, 88 )
rotation = 3.14159

[node name="Floorx25" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 64, 40 )
rotation = 1.57079

[node name="Floorx17" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 96, 84 )
rotation = 4.71238

[node name="Floorx26" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 104, 44 )
rotation = 3.14159

[node name="Floorx27" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 136, 92 )
rotation = 3.14159

[node name="Floorx18" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 160, 92 )
rotation = 3.14159

[node name="Floorx19" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 200, 92 )
rotation = 3.14159

[node name="Floorx20" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 240, 92 )
rotation = 3.14159

[node name="Floorx21" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 280, 92 )
rotation = 3.14159

[node name="Floorx22" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 320, 92 )
rotation = 3.14159

[node name="Floorx23" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 312, 124 )
rotation = 4.71238

[node name="Floorx24" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 312, 140 )
rotation = 4.71238

[node name="Floorx6" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 40, 140 )

[node name="Floorx7" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 80, 140 )

[node name="Floorx8" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 120, 140 )

[node name="Floorx9" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 160, 140 )

[node name="Floorx10" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 200, 140 )

[node name="Floorx11" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 240, 140 )

[node name="Floorx12" parent="Walls" instance=ExtResource( 1 )]
position = Vector2( 280, 140 )

[node name="Corner" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 4, 84 )

[node name="Corner2" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 4, 144 )

[node name="Corner3" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 316, 144 )

[node name="Corner4" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 316, 88 )

[node name="Corner6" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 100, 40 )

[node name="Corner7" parent="Walls" instance=ExtResource( 8 )]
position = Vector2( 60, 40 )

[node name="Player" parent="." instance=ExtResource( 7 )]
position = Vector2( 48, 96 )

[node name="Knight" parent="." instance=ExtResource( 10 )]
position = Vector2( 20, 132.278 )

[node name="KeyNote" parent="." instance=ExtResource( 12 )]

[node name="MotherCall" parent="." instance=ExtResource( 11 )]

[node name="Sounds" parent="." instance=ExtResource( 13 )]

[node name="Sounds2" parent="." instance=ExtResource( 13 )]

[node name="Voice1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -20.0

[node name="Voice2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -20.0
